# RNN

./: .gitignore  pyproject.toml
src/: main.py  rnn.py
