[project]
name = "RNN"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Pierre Quinton", email = "pierre.quinton@gmail.com"},
]
dependencies = ["torchjd>=0.5.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
